@@ -117,10 +117,6 @@ public class ExtraFieldUtils {
             }
             start += (length + WORD);
         }
-        if (start != data.length) { // array not exhausted
-            throw new ZipException("data starting at " + start
-                + " is in unknown format");
-        }
 
         ZipExtraField[] result = new ZipExtraField[v.size()];
         return (ZipExtraField[]) v.toArray(result);
